--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
-    "mongoose": "^8.13.1"
+    "mongoose": "^8.13.1",
+    "validator": "^13.15.0"
   }
 }
